--- a/website-portflio/src/components/DesktopIcon.css
+++ b/website-portflio/src/components/DesktopIcon.css
@@ -6,6 +6,7 @@
     padding: 5px;
     border: 1px solid transparent;
     width: 80px;
+    max-height: 60px; 
 }
 
 .desktop-icon:hover {
@@ -13,11 +14,19 @@
     border: 1px dotted #ffffff;
 }
 
-.desktop-icon img {
+.desktop-icon:active {
+    background: rgba(0, 0, 139, 0.5);
+}
+
+.icon-image {
     width: 32px;
     height: 32px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
     margin-bottom: 5px;
-    image-rendering: pixelated;
+    flex-shrink: 0; 
 }
 
 .desktop-icon span {
@@ -26,4 +35,10 @@
     text-align: center;
     text-shadow: 1px 1px 1px black;
     word-wrap: break-word;
+    line-height: 1.2;
+    max-height: 32px; 
+    overflow: hidden;
+    display: -webkit-box;
+    -webkit-line-clamp: 2; 
+    -webkit-box-orient: vertical;
 }
